--- a/package.json
+++ b/package.json
@@ -1,15 +1,32 @@
 {
   "name": "vue-grid-canvas",
   "version": "1.0.0",
-  "description": "a vue component",
-  "author": "Harvey Zhao <zhaoyh294@163.com>",
-  "private": true,
+  "description": "A vue component, it can generate a similar excel form for you",
+  "main": "dist/vue-canvas-grid.js",
   "scripts": {
     "dev": "node build/dev-server.js",
     "start": "npm run dev",
     "build": "node build/build.js",
+    "dist": "cross-env NODE_ENV=production webpack --progress --hide-modules",
     "lint": "eslint --ext .js,.vue src"
   },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Harveyzhao/vue-grid-canvas.git"
+  },
+  "keywords": [
+    "vue",
+    "vuejs",
+    "canvas",
+    "table",
+    "grid",
+    "excel",
+    "editable",
+    "performance"
+  ],
+  "author": "Harvey Zhao <zhaoyh294@163.com>",
+  "homepage": "https://github.com/Harveyzhao",
+  "license": "MIT",
   "dependencies": {
     "throttle-debounce": "^1.0.1",
     "vue": "^2.4.2",
@@ -27,6 +44,7 @@
     "chalk": "^2.0.1",
     "connect-history-api-fallback": "^1.3.0",
     "copy-webpack-plugin": "^4.0.1",
+    "cross-env": "^5.1.1",
     "css-loader": "^0.28.0",
     "eslint": "^3.19.0",
     "eslint-config-airbnb-base": "^11.3.0",
