--- a/package.json
+++ b/package.json
@@ -1,8 +1,11 @@
 {
   "name": "vue-grid-canvas",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "A vue component, it can generate a similar excel form for you",
   "main": "dist/vue-canvas-grid.js",
+  "files": [
+    "dist"
+  ],
   "scripts": {
     "dev": "node build/dev-server.js",
     "start": "npm run dev",
